--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -48,6 +48,7 @@ jobs:
             ghcr.io/${{ github.repository }}:${{ steps.vars.outputs.sha_short }}
             ghcr.io/${{ github.repository }}:latest
           # build on feature branches, push only on main branch
+          push: true
           # push: ${{ github.ref == 'refs/heads/main' }}
 
       - name: Image digest
