--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,10 +1,8 @@
-name: Build Container
+name: Build and Release Container
 on:
   # run it on push to the default repository branch
   push:
     branches: [main]
-  # run it during pull request
-  pull_request:
 
 jobs:
   validate:
@@ -69,10 +67,25 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Run Trivy vulnerability scanner
+      - name: Trivy Scan - Unknown, Low and Medium Severity
+        uses: aquasecurity/trivy-action@0.0.7
+        with:
+          # image reference
+          image-ref: 'ghcr.io/${{ github.repository }}:latest'
+          # exit code when vulnerabilities were found
+          exit-code: 0
+          # severities of vulnerabilities to be displayed
+          severity: 'UNKNOWN,LOW,MEDIUM'
+
+      - name: Trivy Vulnerability Scan - High and Critical Severity
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: 'ghcr.io/${{ github.repository }}:latest'
+          # exit code when vulnerabilities were found
+          exit-code: 1
+          # severities of vulnerabilities to be displayed
+          severity: 'HIGH,CRITICAL'
+          # template and results
           format: 'template'
           template: '@/contrib/sarif.tpl'
           output: 'trivy-results.sarif'
