--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -4,15 +4,11 @@ on:
   pull_request:
 
 jobs:
-  build:
+  validate:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Set outputs
-        id: vars
-        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
 
       - name: Set up Python 3.8
         uses: actions/setup-python@v1
@@ -22,6 +18,19 @@ jobs:
         run: |
           pip install pre-commit
           pre-commit run --all-files
+
+  build:
+    needs: validate
+    # Run only on PR merge (close)
+    if: github.event.pull_request.merged == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set outputs
+        id: vars
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
 
       - name: Set up Docker Buildx
         id: buildx
